removed Java memory arguments
in particular, XX:MaxPermSize, which is not available anymore in Java 17